--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,5 @@ NotBlank=é obrigatório
 NotNull=é obrigatório
 Email=deve ser um e-mail válido
 Pattern.placa=deve ser uma placa válida
+Positive=o valor deve ser positivo
 Size=deve ter no mínimo {2} e no máximo {1} caracteres
